{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1126,
  "lineage": "b1c96ef2-b4e8-22c2-f62d-aa116f11c3f2",
  "resources": [
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "docker-v1-backend-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-backend-alb/d4fde8bf4b48949a",
            "arn_suffix": "app/docker-v1-backend-alb/d4fde8bf4b48949a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-docker-v1-backend-alb-1460195936.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-backend-alb/d4fde8bf4b48949a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "docker-v1-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c7f6945dbf905054"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07453a5565796fb03"
              },
              {
                "subnet_id": "subnet-09c2b8f01c65c6a7f"
              }
            ],
            "subnets": [
              "subnet-07453a5565796fb03",
              "subnet-09c2b8f01c65c6a7f"
            ],
            "vpc_id": "vpc-0b880648ed7e47e34",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_backend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "docker-v1-backend-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:listener/app/docker-v1-backend-alb/d4fde8bf4b48949a/7605f10647fc2e3f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:listener/app/docker-v1-backend-alb/d4fde8bf4b48949a/7605f10647fc2e3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-backend-alb/d4fde8bf4b48949a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_backend.aws_lb.docker-v1-backend-alb",
            "module.alb_backend.aws_lb_target_group.docker-v1-backend-tg",
            "module.sg.aws_security_group.alb_backend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "docker-v1-backend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
            "arn_suffix": "targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-backend-alb/d4fde8bf4b48949a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "docker-v1-tg-backend",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "docker-v1-backend-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend-a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c-2025052207284945430000000c",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
            "target_id": "i-0818bec3387e0468b"
          },
          "dependencies": [
            "module.alb_backend.aws_lb_target_group.docker-v1-backend-tg",
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.aws_instance.backend_a",
            "module.ec2.aws_instance.backend_c",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_backend",
            "module.sg.aws_security_group.backend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "backend-c",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c-20250522075346508600000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-backend/fdde68c459460a0c",
            "target_id": "i-063e451ef180e06b9"
          },
          "dependencies": [
            "module.alb_backend.aws_lb_target_group.docker-v1-backend-tg",
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.aws_instance.backend_a",
            "module.ec2.aws_instance.backend_c",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_backend",
            "module.sg.aws_security_group.backend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "docker-v1-frontend-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-frontend-alb/b32dc5ff461e6986",
            "arn_suffix": "app/docker-v1-frontend-alb/b32dc5ff461e6986",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "docker-v1-frontend-alb-2088051273.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-frontend-alb/b32dc5ff461e6986",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "docker-v1-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05fe91871f44df996"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013385d6c9a6ab019"
              },
              {
                "subnet_id": "subnet-0142372d4011b5328"
              }
            ],
            "subnets": [
              "subnet-013385d6c9a6ab019",
              "subnet-0142372d4011b5328"
            ],
            "vpc_id": "vpc-0b880648ed7e47e34",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_frontend",
            "module.subnet.aws_subnet.public_a",
            "module.subnet.aws_subnet.public_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "docker-v1-frontend-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:listener/app/docker-v1-frontend-alb/b32dc5ff461e6986/46986f67aa967251",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:listener/app/docker-v1-frontend-alb/b32dc5ff461e6986/46986f67aa967251",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-frontend-alb/b32dc5ff461e6986",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_frontend.aws_lb.docker-v1-frontend-alb",
            "module.alb_frontend.aws_lb_target_group.docker-v1-frontend-tg",
            "module.sg.aws_security_group.alb_frontend",
            "module.subnet.aws_subnet.public_a",
            "module.subnet.aws_subnet.public_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "docker-v1-frontend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
            "arn_suffix": "targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:loadbalancer/app/docker-v1-frontend-alb/b32dc5ff461e6986"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "docker-v1-tg-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_frontend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "docker-v1-frontend-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend-a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8-2025052207284949550000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
            "target_id": "i-0571c9813334aabf5"
          },
          "dependencies": [
            "module.alb_frontend.aws_lb_target_group.docker-v1-frontend-tg",
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.aws_instance.frontend_a",
            "module.ec2.aws_instance.frontend_c",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_frontend",
            "module.sg.aws_security_group.frontend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "frontend-c",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8-2025052207284957540000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:346011888304:targetgroup/docker-v1-tg-frontend/6088b5c517eb5ee8",
            "target_id": "i-0b259a5eb7461bbc6"
          },
          "dependencies": [
            "module.alb_frontend.aws_lb_target_group.docker-v1-frontend-tg",
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.aws_instance.frontend_a",
            "module.ec2.aws_instance.frontend_c",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_frontend",
            "module.sg.aws_security_group.frontend",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ece8f4ffe2b19a4",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-0818bec3387e0468b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceProfile",
            "id": "i-0818bec3387e0468b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae6f7c06f0e2f21f",
            "private_dns": "ip-10-0-11-96.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026a92bed670976e9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c2b8f01c65c6a7f",
            "tags": {
              "Environment": "prod",
              "Name": "docker-v1-backend-server-a",
              "Project": "tamnara"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "docker-v1-backend-server-a",
              "Project": "tamnara"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e23697ee927a849d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_backend",
            "module.sg.aws_security_group.backend",
            "module.subnet.aws_subnet.private_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ece8f4ffe2b19a4",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-063e451ef180e06b9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceProfile",
            "id": "i-063e451ef180e06b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4750509920cbc3d",
            "private_dns": "ip-10-0-12-14.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a5afee80384e54c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07453a5565796fb03",
            "tags": {
              "Environment": "prod",
              "Name": "docker-v1-backend-server-c",
              "Project": "tamnara"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "docker-v1-backend-server-c",
              "Project": "tamnara"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e23697ee927a849d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_backend",
            "module.sg.aws_security_group.backend",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ece8f4ffe2b19a4",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-0571c9813334aabf5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceProfile",
            "id": "i-0571c9813334aabf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07861bc9edd624804",
            "private_dns": "ip-10-0-11-235.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0492a1e6a1c18e80a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c2b8f01c65c6a7f",
            "tags": {
              "Environment": "prod",
              "Name": "docker-v1-frontend-server-a",
              "Project": "tamnara"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "docker-v1-frontend-server-a",
              "Project": "tamnara"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8f9042cbb911313"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_frontend",
            "module.sg.aws_security_group.frontend",
            "module.subnet.aws_subnet.private_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ece8f4ffe2b19a4",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-0b259a5eb7461bbc6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceProfile",
            "id": "i-0b259a5eb7461bbc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076fb8e5ea519f25b",
            "private_dns": "ip-10-0-12-143.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cee9a9b785a3d75",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07453a5565796fb03",
            "tags": {
              "Environment": "prod",
              "Name": "docker-v1-frontend-server-c",
              "Project": "tamnara"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "docker-v1-frontend-server-c",
              "Project": "tamnara"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8f9042cbb911313"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ecs_instance",
            "module.ec2.aws_iam_role.ecs_instance_role",
            "module.ec2.data.aws_ssm_parameter.ecs_ami",
            "module.sg.aws_security_group.alb_frontend",
            "module.sg.aws_security_group.frontend",
            "module.subnet.aws_subnet.private_c",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0614f06141bb32fab",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:elastic-ip/eipalloc-0614f06141bb32fab",
            "association_id": "eipassoc-032dd4df8765e8c1a",
            "domain": "vpc",
            "id": "eipalloc-0614f06141bb32fab",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b1043a2c7c777c3e",
            "private_dns": "ip-10-0-1-189.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-13-209-158-95.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.158.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "docker-v1-nat-eip"
            },
            "tags_all": {
              "Name": "docker-v1-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0614f06141bb32fab",
            "association_id": "eipassoc-032dd4df8765e8c1a",
            "connectivity_type": "public",
            "id": "nat-0be5ce019e8d0286d",
            "network_interface_id": "eni-0b1043a2c7c777c3e",
            "private_ip": "10.0.1.189",
            "public_ip": "13.209.158.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0142372d4011b5328",
            "tags": {
              "Name": "docker-v1-natgw"
            },
            "tags_all": {
              "Name": "docker-v1-natgw"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.subnet.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:route-table/rtb-003188153063d732f",
            "id": "rtb-003188153063d732f",
            "owner_id": "346011888304",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be5ce019e8d0286d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-v1-privateRT"
            },
            "tags_all": {
              "Name": "docker-v1-privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.subnet.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018071215e546392a",
            "route_table_id": "rtb-003188153063d732f",
            "subnet_id": "subnet-09c2b8f01c65c6a7f"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.nat_gateway.aws_route_table.private",
            "module.subnet.aws_subnet.private_a",
            "module.subnet.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b670a561c0b9eb03",
            "route_table_id": "rtb-003188153063d732f",
            "subnet_id": "subnet-07453a5565796fb03"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.nat_gateway.aws_route_table.private",
            "module.subnet.aws_subnet.private_c",
            "module.subnet.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0f36c88843ce9f0e0",
            "description": "Allow MySQL from backend SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f36c88843ce9f0e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23697ee927a849d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tamnara-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "346011888304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tamnara-prod-rds-sg"
            },
            "tags_all": {
              "Name": "tamnara-prod-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_backend",
            "module.sg.aws_security_group.backend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0c7f6945dbf905054",
            "description": "Allow internal ALB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7f6945dbf905054",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-v1-sg-alb-backend",
            "name_prefix": "",
            "owner_id": "346011888304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-05fe91871f44df996",
            "description": "Allow HTTP from internet to frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe91871f44df996",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-v1-sg-alb-frontend",
            "name_prefix": "",
            "owner_id": "346011888304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0e23697ee927a849d",
            "description": "Allow from ALB (backend)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e23697ee927a849d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7f6945dbf905054"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "docker-v1-sg-backend",
            "name_prefix": "",
            "owner_id": "346011888304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg"
            },
            "tags_all": {
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_backend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0a8f9042cbb911313",
            "description": "Allow from ALB (frontend)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8f9042cbb911313",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05fe91871f44df996"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-v1-sg-frontend",
            "name_prefix": "",
            "owner_id": "346011888304",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_frontend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-09c2b8f01c65c6a7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2b8f01c65c6a7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-07453a5565796fb03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07453a5565796fb03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-c"
            },
            "tags_all": {
              "Name": "private-subnet-c"
            },
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0142372d4011b5328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0142372d4011b5328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-013385d6c9a6ab019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013385d6c9a6ab019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:internet-gateway/igw-0a6e7be4179350124",
            "id": "igw-0a6e7be4179350124",
            "owner_id": "346011888304",
            "tags": {
              "Name": "docker-v1-igw"
            },
            "tags_all": {
              "Name": "docker-v1-igw"
            },
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:route-table/rtb-00008814bf0e193f6",
            "id": "rtb-00008814bf0e193f6",
            "owner_id": "346011888304",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6e7be4179350124",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-v1-publicRT"
            },
            "tags_all": {
              "Name": "docker-v1-publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b880648ed7e47e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009a1aa269a836b8b",
            "route_table_id": "rtb-00008814bf0e193f6",
            "subnet_id": "subnet-0142372d4011b5328"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_a",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f1fb763e725f687",
            "route_table_id": "rtb-00008814bf0e193f6",
            "subnet_id": "subnet-013385d6c9a6ab019"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_c",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:vpc/vpc-0b880648ed7e47e34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa14437c28fb31c9",
            "default_route_table_id": "rtb-04cd8968b14587da2",
            "default_security_group_id": "sg-0de6064c010a447c5",
            "dhcp_options_id": "dopt-057e17760c1177c52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b880648ed7e47e34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cd8968b14587da2",
            "owner_id": "346011888304",
            "tags": {
              "Name": "docker-v1-vpc"
            },
            "tags_all": {
              "Name": "docker-v1-vpc"
            }
          }
        }
      ]
    }
  ]
}